# TSST_syndiff_pipeline

./: .gitignore  README.md  __init__.py  adaptive_background.py  background.py  config.py  download.py  epsf_fitting.py  ffi_naming.py  final_diff.py  frame_manifest.py  hotpants_runner.py  paths.py  photometry.py  pipeline_context.py  pipeline_execute.py  pipeline_validate.py  plot_pipeline.py  pyproject.toml  run_pipeline.py  sat_template.py  temporal_smooth.py  wcs_grouping.py
config/: README.md  deployment.yaml.example  diff_config.yaml  diff_config_multi_kernel.yaml  diff_config_multi_kernel_resume.yaml  diff_config_single_kernel.yaml  pipeline.yaml  pipeline_multi_kernel.yaml  pipeline_multi_kernel_resume.yaml  targets_2020ut.csv  targets_example.csv
docs/: README.md  cluster_smoke_checklist.md  pipeline_state_machine_reference.md  storage_layout.md  syndiff_cli.md  syndiff_template_scripts.md  template_pipeline.md  template_runner_architecture.md
example/: README.md  recipe_a_prf.yaml  recipe_b_epsf_sat_bkg.yaml  recipe_c_second_hotpants.yaml
scripts/: fetch_tessreduce_for_targets.py
syndiff_pipeline/: __init__.py  cli.py  pipeline_spec.py
template/: __init__.py  convolution_utils.py  cross_projection_padding.py  csv_utils.py  downsample.py  pancakes.py  ps1_download.py  ps1_process.py  zarr_utils.py
template_runner/: __init__.py  cli.py  condor.py  daemon.py  deployment.py  discord_bot.py  discord_bot_control.py  handoff.py  launcher.py  logs.py  notifications.py  resources.py  run_context.py  run_report.py  run_stage.py  runner_config.py  scheduler.py  scheduler_control.py  stage_params.py  stage_progress.py  stages.py  state.py  targets.py  verify.py  verify_status.py  verify_worker.py  workspace.py
tests/: site_config.py  site_fixtures.py  test_additional_forced_targets.py  test_backfill_ps1_removed_stars.py  test_backfill_stage_rows.py  test_background_stage.py  test_cli_presets.py  test_cli_workspace.py  test_condor_lifecycle.py  test_crop_ffi_header.py  test_daemon_behavior.py  test_diff_handoff_bootstrap.py  test_diff_paths.py  test_diff_stage.py  test_diff_workspace_verify.py  test_discord_bot.py  test_discord_bot_control.py  test_download_ffis.py  test_downsample_progress.py  test_downsample_progress_integration.py  test_downsample_validation.py  test_ds9_regions.py  test_e2e_diff_only.py  test_e2e_seven_stage_tick.py  test_effective_n_jobs.py  test_ensure_gaia_crop.py  test_event_ws_symlinks.py  test_ffi_naming.py  test_flux_calibration.py  (+54 more)
(+129 files in other folders)
