[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "syndiff-pipeline"
version = "0.1.0"
description = "SynDiff TESS FFI difference imaging and template-building pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hotpants>=0.1.1",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]

[project.scripts]
syndiff = "syndiff_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["syndiff_pipeline*"]

[tool.setuptools.package-data]
"syndiff_pipeline.common.orchestration" = ["condor_wrapper.sh"]
"syndiff_pipeline.resources" = ["skycell_wcs.csv", "README.md"]

[tool.pyright]
executionEnvironments = [
  { root = "syndiff_pipeline", extraPaths = [".."], pythonVersion = "3.10" }
]
